--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      property="og:image"
+      content="https://patrikdev.github.io/MyResume/screenshot/home.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1351" />
+    <meta property="og:image:height" content="1411" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
